[08/04/21]
-Added Level Select scrolling support for mouse scroll wheel and keyboard (W/S/UP/DOWN)
    -Touch scrolling (laptop touchpad and Mac mouse) still might not work

[08/02/21]
-Added changelog to Main Menu
-Added Laser Gate Block variant that starts deactivated
-Updated Shotgun pellet's sprite and added muzzle flash
-Updated Ball Cannon ball's sprite